2004-12-23 Mikhail Khodjaiants
	The "ascii" renedering is removed from the default renderings.
	* plugin.xml
 
2004-12-21 Mikhail Khodjaiants
	Fix for bug 73168: Use memory view provided by Eclipse platform in CDT.
	Added rendering bindings and default renderings for CDT memory blocks.
	* plugin.xml

2004-12-03 Mikhail Khodjaiants
	Fix for bug 62659: Unable to set default for register format via plugin_customization.ini.
	* CDebugPreferencePage.java

2004-12-02 Mikhail Khodjaiants
	Fix for bug 80055: ArrayIndexOutOfBoundsException in DisassemblyView.
	* DisassemblyEditorInput.java

2004-11-26 Mikhail Khodjaiants
	Do not use "void" if parameter's list is empty when constructing a function or 
	method name for function breakpoints. Name mapping should be done on the implementation level.
	* ToggleBreakpointAdapter.java

2004-11-25 Mikhail Khodjaiants
	Fix for bug 79452: Unable to set a breakpoint on a class method.
	* plugin.xml
	* ToggleBreakpointAdapter.java

2004-11-25 Mikhail Khodjaiants
	Replaced the "breakpointRemoved" method of ICBreakpointListener by the "breakpointsRemoved"
	method that accepts multiple breakpoints.
	* CBreakpointUpdater.java

2004-11-23 Mikhail Khodjaiants
	Workaround for bug 69728: IndexOutOfBoundsException in TextPresentation.
	This bug is fixed in Eclipse 3.1.
	* DisassemblyView.java

2004-11-18 Mikhail Khodjaiants
	Fix for bug 69184: Activate the Expression view when expression is added.
	* AddExpressionEditorActionDelegate.java

2004-11-15 Mikhail Khodjaiants
	Fix for bug 78604: Disassembly causes Java exception when disassembling beyond fn(?).
	* DisassemblyEditorInput.java

2004-11-11 Mikhail Khodjaiants
	Fix for bug 73801: Function breakpoints set from C View aren't shown in editor.
	* ToggleBreakpointAdapter.java

2004-11-10 Mikhail Khodjaiants
	Fix for bug 77437: Disassembly blocks with no associated source code has PC pointer on wrong line.
	* DisassemblyEditorInput.java

2004-11-09 Mikhail Khodjaiants